testsuite/poke.pkl/acons-diag-1.pk
/* { dg-do compile } */

var a
  = int[] ("foo"); /* { dg-error ".*\n.*" } */
